Architecture redesign. - Added GamePlatform.cs class for judging players. - Added Action.cs class that defines player actions in game. - Comments, small code snippets, logic slightly changed.

--- a/QuartoLib/QuartoLib.csproj
+++ b/QuartoLib/QuartoLib.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
     <Compile Include="Figure.cs" />
+    <Compile Include="GamePlatform.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="IPlayer.cs" />
