Added progress bar when cpu is thinking. Edited about and help windows.

--- a/Quarto/Quarto.csproj
+++ b/Quarto/Quarto.csproj
@@ -135,12 +135,17 @@
       <Name>QuartoLib</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\Qr_logo.ico" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="figures\figure0.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Ромб-Два-Белый-Сплошной.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="bin\Debug\Qr_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
